--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Stas Kobzar <stas@modulis.ca>",
   "private": true,
   "scripts": {
+    "codecov": "codecov -t f0d3221e-ebf9-482e-938a-db04b1fdbc4e",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "unit:watch": "jest --config test/unit/jest.conf.js --watch",
     "test": "npm run unit",
