--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Vue audio visualization components",
   "author": "Stas Kobzar <stas@modulis.ca>",
-  "private": true,
+  "private": false,
   "scripts": {
     "codecov": "codecov -t f0d3221e-ebf9-482e-938a-db04b1fdbc4e",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
