--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "http5-audio-visualizer",
     "canvas"
   ],
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/staskobzar/vue-audio-visual/issues"
   },
