--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "canvas": "^1.6.13",
     "chalk": "^2.4.2",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.2.0",
@@ -49,6 +48,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "jest-canvas-mock": "^2.1.1",
     "jest-serializer-vue": "^1.0.0",
     "node-notifier": "^5.4.3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
