--- a/package.json
+++ b/package.json
@@ -1,87 +1,74 @@
 {
   "name": "vue-audio-visual",
-  "version": "1.4.1",
+  "version": "2.0.0",
   "description": "Vue audio visualization components",
   "author": "Stas Kobzar <staskobzar@gmail.com>",
   "private": false,
   "scripts": {
     "codecov": "codecov -t f0d3221e-ebf9-482e-938a-db04b1fdbc4e",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "unit:watch": "jest --config test/unit/jest.conf.js --watch",
-    "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs",
-    "build": "node build/build.js"
+    "lint": "vue-cli-service lint",
+    "build": "vue-cli-service build --target lib src/plugin.js",
+    "test": "vue-cli-service test:unit --coverage"
   },
   "dependencies": {
-    "axios": "^0.18.1",
-    "vue": "^2.6.11"
+    "axios": "^0.19.2",
+    "core-js": "^3.4.4",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.31",
-    "autoprefixer": "^8.6.5",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^22.4.4",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "chalk": "^2.4.2",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^3.4.2",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-unit-jest": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "jest-canvas-mock": "^2.2.0",
-    "jest-serializer-vue": "^1.0.0",
-    "node-notifier": "^5.4.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "ora": "^2.1.0",
-    "portfinder": "^1.0.25",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.6",
-    "rimraf": "^2.7.1",
-    "semver": "^5.7.1",
-    "shelljs": "^0.8.3",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^1.1.2",
-    "vue-jest": "^2.6.0",
-    "vue-loader": "^15.8.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-merge": "^4.2.2"
+    "vue-template-compiler": "^2.6.10"
   },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "@vue/standard"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
   ],
-  "main": "src/index.js",
-  "directories": {
-    "test": "test"
+  "main": "src/plugin.js",
+  "jest": {
+    "preset": "@vue/cli-plugin-unit-jest",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "Plugin": "<rootDir>/src/plugin"
+    },
+    "setupFiles": [
+      "<rootDir>/tests/unit/setup.js",
+      "<rootDir>/tests/unit/mock.js"
+    ]
   },
   "repository": {
     "type": "git",
