update model create method

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-audio-visual",
+  "name": "vue2-audio-visual",
   "version": "2.2.0",
   "description": "Vue audio visualization components",
   "author": "Stas Kobzar <staskobzar@gmail.com>",
