fix github node action

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "run-p type-check build-demo build-dist",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
+    "test:ci": "vitest --environment jsdom --run",
     "build-demo": "vite build --base=/vue-audio-visual/",
     "build-dist": "vite build --config vite.config.dist.ts",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
