--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,3 +30,5 @@ jobs:
     - run: npm run lint
     - run: npm run build --if-present
     - run: npm run test:ci
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
