--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run lint
+    - name: Build plugin
     - run: npm run build --if-present
+    - name: Run unit tests
     - run: npm run test:ci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
