--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vue-audio-visual",
-  "version": "3.0.6",
+  "version": "3.0.7",
   "type": "module",
+  "license": "MIT",
   "files": [
     "dist"
   ],
