--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "types": "./dist/types/src/plugin.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/vue-audio-visual.js",
+      "import": ["./dist/vue-audio-visual.js", "./dist/types/src/plugin.d.ts"],
       "require": "./dist/vue-audio-visual.umd.cjs"
     }
   },
