--- a/tsconfig.build-types.json
+++ b/tsconfig.build-types.json
@@ -7,6 +7,9 @@
     "node_modules"
   ],
   "compilerOptions": {
+    "outDir": "dist/types",
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "composite": true,
     "lib": [],
     "types": [
