fix: target needs to be set inside the compiler options.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "files": [],
-  "target": "esnext",
+  "compilerOptions": {
+    "target": "esnext",
+  },
   "references": [
     {
       "path": "./tsconfig.config.json"
