chore: add types for Vitest and Vite in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "files": [],
   "compilerOptions": {
     "target": "esnext",
+    "types": ["vitest/global", "vite/client"]
   },
   "references": [
     {
