--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "files": [],
-  "target": "esnext",
+  "compilerOptions": {
+    "target": "esnext",
+    "types": ["vitest/global", "vite/client"]
+  },
   "references": [
     {
       "path": "./tsconfig.config.json"
